--- a/.github/workflows/build-freebsd.yml
+++ b/.github/workflows/build-freebsd.yml
@@ -17,11 +17,12 @@ jobs:
           pkg install -y node wget curl git go121 gcc bash gawk gsed upx 
           ln -s /usr/local/bin/go121 /usr/local/bin/go
         run: |
-          export LATEST_APP=$(wget -qO- https://api.github.com/repos/ykxVK8yL5L/alist/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')
-          git clone -b $LATEST_APP https://github.com/ykxVK8yL5L/alist
+          #export LATEST_APP=$(wget -qO- https://api.github.com/repos/ykxVK8yL5L/alist/tags | gawk -F '["v]' '/name/{print "v"$5;exit}')
+          #git clone -b $LATEST_APP https://github.com/ykxVK8yL5L/alist
+          git clone https://github.com/ykxVK8yL5L/alist
           cd alist/public && wget https://github.com/ykxVK8yL5L/alist-web/releases/latest/download/dist.tar.gz && tar xzf dist.tar.gz && rm dist.tar.gz
           cd ..
-          bash ../build-freebsd.sh
+          bash ../build-freebsd.sh dev
           upx -9 alist
           tar -czvf alist-freebsd.tar.gz alist
           
