--- a/.github/workflows/release_docker.yml
+++ b/.github/workflows/release_docker.yml
@@ -14,8 +14,8 @@ env:
   REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
   ARTIFACT_NAME: 'binaries_docker_release'
   RELEASE_PLATFORMS: 'linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/arm/v6,linux/s390x,linux/ppc64le,linux/riscv64'
-  IMAGE_PUSH: ${{ github.event_name == 'push' }}
-  IMAGE_IS_PROD: ${{ github.ref_type == 'tag' }}
+  IMAGE_PUSH: true
+  IMAGE_IS_PROD: true
   IMAGE_TAGS_BETA: |
     type=schedule
     type=ref,event=branch
